# snake

./: CMakeLists.txt  main.cpp
src/: Candy.cpp  Candy.h  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameObject.hpp  Grid.cpp  Grid.hpp  LogicalPositionProvider.hpp  Snake.cpp  Snake.hpp  SquareGrid.cpp  SquareGrid.hpp  main.cpp
